	  do_colorinit() (renamed color_init()), color_to_int() (renamed
	  color_to_short()), and parse_colors(). (DLR)
	- Change color handling to save only the extension and color
	  regex strings constantly,  and to actually compile them on an
	  as-needed basis.  Also, make a color syntax specified on the
	  command line override the syntax associated with the current
	  file extension, and add a "default" syntax that takes no
	  extensions for those files that don't match any other
	  syntax's extensions.  Changes to update_color(),
	  thanks_for_all_the_fish(), nregcomp(), parse_syntax(), and
	  parse_colors(). (Brand Huntsman and DLR)
	- Various other color fixes.  Handle unspecified foreground
	  colors properly, treat syntax names case sensitively, flag
	  duplicate syntax names as errors, don't automatically
	  reinitialize the displayed colors every time we update the
	  current buffer's colors (since the buffer may not be displayed
	  immediately), don't bother doing complete refreshes of the
	  screen when color support is enabled if there's no regex
	  associated with the current file, and rename variable
	  exttype->val to exttype->ext, for consistency.  Changes to
	  do_colorinit() (renamed color_init()), update_color() (renamed
	  color_update()), write_file(), do_input(), do_output(), and
	  parse_syntax(). (DLR)
	- Simplify get_totals() to only get the total number of
	  characters, and eliminate dependence on its old ability to get
	  the total number of lines by renumber()ing when necessary and
	  using the number of the last line of a filestruct.  Changes to
	  read_file(), move_to_filestruct(), copy_from_filestruct(),
	  do_justify(), get_totals() (renamed get_totsize()), and
	  do_cursorpos(). (DLR)
	- Change the NANO_WIDE #define to ENABLE_UTF8, as the latter is
	  clearer. (DLR)
	- Minor history code fixes: Make sure that the current position
	  in the history list is properly set to the bottom if we cancel